<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:id="@+id/view_in_fragment"
    tools:context="com.example.admin.contactsapp.view.contact.ContactFragment">

    <ImageView
        android:id="@+id/ivContactImage"
        android:src="@drawable/addphoto"
        android:scaleType="fitXY"
        android:layout_width="120dp"
        android:layout_height="150dp"/>

    <LinearLayout
        android:id="@+id/llNameFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivContactImage"
        android:layout_toEndOf="@+id/ivContactImage">

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First name" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Last name" />

        <EditText
            android:id="@+id/etCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Company" />


    </LinearLayout>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="Phone"
        android:layout_below="@+id/llNameFields"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_below="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        android:hint="Email"/>

    <Button
        android:id="@+id/btnCancel"
        android:text="Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="59dp"
        android:layout_marginStart="59dp"
        android:layout_below="@+id/etEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:text="Save"
        android:layout_alignBaseline="@+id/btnCancel"
        android:layout_alignBottom="@+id/btnCancel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
